- Changed font sizes. - Added ability to have 3 price columns on product card. - Fixed carousel container spacing.

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-size: 1vw;
     font-family: 'Lato';
     font-weight: 100;
     color: $neutral-very-dark;
