--- a/src/sass/components/_carousel/_ContentContainer.scss
+++ b/src/sass/components/_carousel/_ContentContainer.scss
@@ -3,11 +3,13 @@ $transition-duration: 1500ms;
 
 .tam-sign_carousel_content-cntr {
     position: absolute;
+    box-sizing: border-box;
     top: 0;
     left: 0;
     right: auto;
     height: 100%;
     width: 50%;
+    padding: 0 1rem;
     opacity: 0;
     will-change: left, opacity;
     -webkit-transform: translateX(201%);
@@ -21,24 +23,28 @@ $transition-duration: 1500ms;
     }
 
     &[data-position="OD"] {
+        padding-right: 2rem;
         opacity: 1;
         -webkit-transition: none;
         transition: none;
     }
 
     &[data-position="P1"] {
+        padding-right: 2rem;
         opacity: 1;
         -webkit-transform: translateX(100%);
         transform: translateX(100%);
     }
 
     &[data-position="P2"] {
+        padding-left: 2rem;
         opacity: 1;
         -webkit-transform: translateX(0);
         transform: translateX(0);
     }
 
     &[data-position="X"] {
+        padding-left: 2rem;
         opacity: 1;
         -webkit-transform: translateX(-101%);
         transform: translateX(-101%);
