--- a/src/sass/components/products/_card/_CardInfo.scss
+++ b/src/sass/components/products/_card/_CardInfo.scss
@@ -7,7 +7,7 @@
 }
 
 .tam-sign_products_card_info_title {
-    font-size: 1.1em;
+    font-size: 1.4em;
     font-weight: 400;
     letter-spacing: 0.04em;
     text-align: center;
