--- a/src/sass/components/products/_card/_ProductCol.scss
+++ b/src/sass/components/products/_card/_ProductCol.scss
@@ -1,7 +1,9 @@
 @import 'sass/colors.scss';
 
 .tam-sign_products_card_product_col {
-    font-size: 1em;
+    vertical-align: middle;
+    font-size: 1.2em;
+    line-height: 1.2em;
     font-weight: 400;
     letter-spacing: 0.1em;
     text-transform: uppercase
