--- a/src/sass/signs/products/ProductsCarouselSign.scss
+++ b/src/sass/signs/products/ProductsCarouselSign.scss
@@ -41,15 +41,3 @@
     transform: translateY(-50%);
     font-size: 1.3rem;
 }
-
-.tam-sign_products-carousel_card-wrapper {
-    margin: 0 1.5em;
-
-    &:first-child {
-        margin-left: 3rem;
-    }
-
-    &:last-child {
-        margin-right: 3rem;
-    }
-}
